fixed top cutoff mobile

--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body {
   background: var(--dark-blue);
   font-size: 15px;
   font-family: "Inter", sans-serif;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 p {
   color: var(--slightly-transparent-white2);
@@ -88,6 +88,7 @@ strong {
 
 @media (min-width: 750px) {
   .card {
+    margin: 1.5rem auto;
     display: flex;
     text-align: left;
     max-width: 1100px;
